Keycloak (#16)
* Add keycloak resource server security config

* Keycloak test container and utils

* Update integration tests using keycloak test container

* Set keycloak on frontend

* Set docker compose to start_only and allow registration in kc

* Update User entity fields, add roles in form of list of strings

* Update config and create user synchronization filter

* Allow cors

* Inject custom axios instance to clients

* Add default @PreAuthorize for api methods

* Update realm exports and test utils

* Add roles field to user dto

* Set restart policy